objects/Participant__c.object
<CustomObject>
    <fields>
        <fullName>NotificationEnvoyee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Envoyée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RACI__c</fullName>
        <description>RACI du participant dans la réunion</description>
        <inlineHelpText>Niveau de responsabilité du participant dans cet atelier</inlineHelpText>
        <label>RACI</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invité</fullName>
                    <default>true</default>
                    <label>Invité</label>
                </value>
                <value>
                    <fullName>Présent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workshop__c</fullName>
        <label>Workshop</label>
        <referenceTo>Workshop__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Participant</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>